tests/baselines/reference/es6ClassTest9.errors.txt
==== tests/cases/compiler/es6ClassTest9.ts (3 errors) ====
    declare class foo();
                     ~
!!! error TS1005: '{' expected.
                      ~
!!! error TS1109: Expression expected.
    function foo() {}
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    